[project]
authors = [
    {name = "Hildeberto", email = "hildeberto@gmail.com"},
]
requires-python = "<3.14,>=3.13"
dependencies = [
    "pelican<5.0.0,>=4.9.1",
    "pelican-sitemap<2.0.0,>=1.0.2",
    "pelican-liquid-tags<2.0.0,>=1.0.3",
    "beautifulsoup4<5.0.0,>=4.11.1",
    "pysvg<1.0.0,>=0.2.2",
    "markdown<4.0.0,>=3.5.2",
    "Pillow<13.0.0,>=12.1.1",
    "lxml<7.0.0,>=6.0.2",
    "pygithub<3.0.0,>=2.1.1",
    "python-dotenv<2.0.0,>=1.0.0",
]
name = "pug-pb-site"
version = "0.1.0"
description = "Novo site da comunidade de usuários Python na Paraíba"

[dependency-groups]
dev = []
